--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,21 @@ body {
 .btn-primary {
   @apply bg-cyan-600 font-semibold text-white md:mx-0 mx-auto rounded-full py-3 px-6 flex items-center gap-2;
 }
+
+.levitation {
+  position: relative;
+  display: inline-block;
+}
+
+.levitation img {
+  animation: levitation 2s ease-in-out infinite alternate;
+}
+
+@keyframes levitation {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-20px);
+  }
+}
