--- a/src/index.css
+++ b/src/index.css
@@ -52,5 +52,5 @@ textarea {
 }
 
 .bg-line {
-  background-image: linear-gradient(0deg, #c1403d 10%, transparent 30%);
+  background-image: linear-gradient(0deg, rgb(8 145 178) 10%, transparent 30%);
 }
